yoshimi 1.5.9 M

2018-10-26 Will
* Implemented CLI PadSynth Controls.

2018-10-25 Will
* Found missing PadSynth overtones option.
* Deactivate PadSynth overtones if set as harmonic.
* Small revision to PadSynth GUI.
* Deactivate SubSynth overtones if set as harmonic.

2018-10-24 Will
* Deactivate PadSynth amp group if Multiplier off.

2018-10-23 Will
* Started defining CLI PadSynth Controls.

2018-10-21 Will
* Implemented proper resonance limits.
* Corrected 2 AddSynth tooltips.

2018-10-20 Will
* Added Lorenzo's synth_prelude to examples.
* Possibly cured occasional GUI corruption.
* Completed CLI AddSynth base controls.

2018-10-19 Will
* Most #defines in globals.h changed to const.
* BugFix: CLI not reading resonance points.
* Completed initial trial of CLI resonance entry.

2018-10-18 Will
* Some cleanups to Resonance GUI.

2018-10-17 Will
* Deactivate resonance GUI if not enabled.
* All mutex code now commented out.
  Will eventually be removed if no problems.

2018-10-15 Will
* Minor code cleanups.
* Doc updates.

2018-10-14 Will
* BugFix: wrong defaults for resonance.
* Resolved more magic numbers.
* Set max buffersize to 8192.
* Revised and unified MIDI controllers.
* Moved CC definitions to globals.h

2018-10-13 Will
* Created global YOSH namespace.
* Implemented common F2B (float to bool) function.
* Updated docs.

2018-10-12 Will
* Converted remaining truncf calls to FR2Z2I.
  Behaviour is now entirely consistent.
* Temporarily disabled assembler FR2Z2I code.
  It screws up in LV2 :(
* Unified DynFilter Filter/Effect controls.

2018-10-2 Will
* Changed F2I to FR2Z2I to clarify behaviour.
  i.e. float round to zero to integer.

2018-10-1 Will
* Completed F2I adjustments.
* Started populating with new F2I.

2018-9-30 Will
* BugFix: AddSynth FM mod was cogging notes.
  Only that mod and at notes close to sample rate.
* Improved note/mod oscillator frequency calculations.
* Reinstated a more advanced version of F2I.
  Some misinformation earlier :(
