@@ -3,7 +3,7 @@ BUG! Multi instances produce jack errors when main instance closed, even if they
 
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
 
-BUG! Exporting kititem padsnth samples crashes GUI - OK headless.
+BUG! Exporting kititem padsnth samples crashes GUI - OK headless. This has been sort-of fixed in /src/UI/MiscGui.cpp
 
 Maybe BUG crash when loading files from banks - cured by clearing an recreating config files.
 
